review overflow fix in progress

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,12 @@
 .profile__info {
+  width: 70%;
+  min-width: 200px;
+  max-width: 500px;
   padding-top: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
 }
 
 
